# xgolite_ros2

./: .gitignore  Dockerfile  LICENSE  README.md  XGOLITE_7605.csv  cyclonedds.xml  docker-compose.yml  entrypoint.sh  joypad_mapping.md  xgolib_documentation.md  xgolite_bt.py
src/apriltag_workspace/: package.xml  setup.cfg  setup.py
src/apriltag_workspace/apriltag_workspace/: v4l2_opencv_cam_node.py  workspace_node.py
src/apriltag_workspace/config/: apriltag_workspace_tags.yaml  camera_info_iriun_approx.yaml  workspace_params.yaml
src/apriltag_workspace/launch/: usb_cam_apriltag_launch.py  workspace_launch.py
src/xgo_ros/: CMakeLists.txt  package.xml
src/xgo_ros/config/: config.json  joy_newpad.yaml
src/xgo_ros/launch/: xgo_control_launch.py  xgo_control_new_joypad_launch.py
src/xgo_ros/src/: imu_to_odom_node.py  xgo_bt_node.py
src/xgolite_nav/: package.xml  setup.cfg  setup.py
src/xgolite_nav/config/: nav_params.yaml
src/xgolite_nav/launch/: nav_launch.py
src/xgolite_nav/xgolite_nav/: __init__.py  astar_planner_node.py  grid_utils.py  localization_node.py  nav_orchestrator_node.py  pure_pursuit_node.py
