<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_workspace</name>
  <version>0.0.1</version>
  <description>
    AprilTag workspace boundary detection and pose visualization.
    Subscribes to TF transforms published by a remote camera (pi_camera → tag36h11:N),
    computes a rectangular workspace from 4 corner tags, and publishes visualization
    markers and a polygon suitable for downstream navigation.
  </description>
  <maintainer email="brian.deegan@universityofgalway.ie">Brian Deegan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- usb_cam_apriltag_launch.py (Iriun / V4L2 local camera) -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
